<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.mvp.productdetail.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_default_padding">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_rating"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_default_padding">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PRODUCTO"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PRECIO"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_price"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CONDICION"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_condition"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MERCADOPAGO"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_mercadopago"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_default_padding">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_city"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_state"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_country"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_shipping"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_free_shipping"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v4.widget.NestedScrollView>